// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders Icon Button in loading State 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 64px;
  height: 64px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #d5ebff;
  border-radius: 50%;
  color: #0a68c1;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-1 svg {
  width: 32px;
  height: 32px;
}

.emotion-1 svg {
  fill: #0a68c1;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  width: 32px;
  height: 32px;
  stroke: #0a68c1;
}

.emotion-4 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <button
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders Icon Button with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 50%;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-1:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <button
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders Large Icon Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 64px;
  height: 64px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 50%;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 32px;
  height: 32px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-1:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <button
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders Medium Icon Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 48px;
  height: 48px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 50%;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-1:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <button
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders Small Icon Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 50%;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-1:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <button
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders icon button link when href passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 50%;
  color: #ffffff;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #ffffff;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-1:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <a
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="buttonLink"
      href="http://localhost:6006"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`IconButton renders with different style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 32px;
  height: 32px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #0a68c1;
  border-width: 1px;
  border-radius: 50%;
  color: #0a68c1;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #0a68c1;
}

.emotion-1:hover:not(:disabled) {
  background-color: #e6f4ff;
  border-color: #02509b;
}

.emotion-1:active:not(:disabled) {
  background-color: #d5ebff;
  border-color: #01396e;
}

.emotion-1:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-1:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <button
      aria-label="Test icon button"
      class="emotion-1"
      data-testid="button"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
